--- a/front-web/src/pages/Home/styles.scss
+++ b/front-web/src/pages/Home/styles.scss
@@ -11,6 +11,7 @@
     border-radius: 20px;
     padding-top: 155px;
     padding-left: 100px;
+    padding-bottom: 150px;
 }
 
 .text-title {
@@ -25,6 +26,7 @@
     letter-spacing: -0.015em;
     color: #9E9E9E;
     margin-top: 30px;
+    margin-bottom: 150px;
 }
 
 .main-image{
