--- a/front-web/src/app.scss
+++ b/front-web/src/app.scss
@@ -25,3 +25,18 @@ h1, h2, h3, h4, h5, h6 {
       color: unset; // Zera o comportamento padrão que o bootstrap tem com os links<a>
     }
   }
+
+
+  .border-radius-10 {
+    border-radius: 10px;
+  }
+
+  .border-radius-20 {
+    border-radius: 20px;
+  }
+
+
+  .card-base {
+    background: #FFF;
+    box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.25);
+  }
