--- a/front-web/src/core/components/ButtonIcon/styles.scss
+++ b/front-web/src/core/components/ButtonIcon/styles.scss
@@ -12,4 +12,5 @@
     display: flex;
     align-items: center; // alinha verticalmente ao centro
     justify-content: center; // alinha horizontalmente ao centro
+    color: #FFF;
 }
