--- a/front-web/src/pages/Catalog/components/ProductCard/styles.scss
+++ b/front-web/src/pages/Catalog/components/ProductCard/styles.scss
@@ -23,4 +23,8 @@
     color: #263238;
 }
 
-
+// Configura o tamanho da imagem de acordo com o container dela
+.product-card-image{
+    width: 160px;
+    height: 160px;
+}
